# graduationDesign

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TECHNICAL_DEBT.md  check_backend.expect  check_server.expect  convert_papers_to_docx.js  deploy_backend.expect  deploy_full.expect  deploy_retry.expect  investigate.expect  investigate_py.expect  package-lock.json  package.json  sonar-project.properties  开题报告.md
.gocache/: trim.txt
.tmp.driveupload/: 146123  146889  146895  146923  147097  147101  147356  147360  147362  147366  147368  147370  147374  147378  147380  147384  147386  147388  147390  147392  147396  147398  147402  147404  147406  147408  147412  147414  147416  147418  147420  147422  147424  147428  147432  147434  147436  147438  147440  147442  (+208 more)
AI Teaching Platform UI_UX/: package.json
academic/: README.md
assets/: README.md
code/: .env  .env.example  .eslintrc.js  .golangci.yml  .prettierignore  .prettierrc  Makefile  README.md  docker-compose.yml  pyproject.toml
code/frontend-react/src-tauri/: Cargo.toml  tauri.conf.json
config/: docs_warning_budget.json
docs/: DOCUMENTATION_CATALOG.md  README.md  frontend-api-architecture-interaction.md  index.md  requirements.md
eduedge-ai-sdk/: Cargo.toml
emfield-teaching-platform/: README.md
frontend-React/: package-lock.json  package.json
hust-report/: defense-presentation.js  graduation-defense-presentation.pptx  package-lock.json  package.json  proposal-defense-outline.md  proposal-defense-presentation.js  report.md  (+4 more)
(+2721 files in other folders)
